--- a/nav.css
+++ b/nav.css
@@ -1,5 +1,5 @@
 html,body{min-height:100%}
-html{background:#FFF url(_intef_bg.png) repeat 0 -2px}
+html{background:#000 url(_intef_bg.png) repeat 0 -2px}
 body{padding:0;
 	text-align:center;
 	background:url(_intef_header.png) no-repeat 50% 0
